--- a/resources/ansible.cfg
+++ b/resources/ansible.cfg
@@ -17,3 +17,7 @@
 [defaults]
 transport=paramiko
 stdout_callback = unixy
+
+[ssh_connection]
+ssh_args = -F ./ssh.cfg -o ControlMaster=auto -o ControlPersist=30m
+control_path = ~/.ssh/ansible-%%r@%%h:%%p
