--- a/resources/ansible.cfg
+++ b/resources/ansible.cfg
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 [defaults]
-transport=paramiko
+transport=ssh
 stdout_callback = unixy
 
 [ssh_connection]
